--- a/about.html
+++ b/about.html
@@ -61,8 +61,10 @@
       <div>
         <h3>Email Newsletter</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-        <input type="email" name="email" placeholder="Enter Email...">
-        <input type="submit" value="Subscribe" class="btn btn-primary">
+        <form name='contact' method="POST" data-netlify='true'>
+          <input type="email" name="email" placeholder="Enter Email...">
+          <input type="submit" value="Subscribe" class="btn btn-primary">
+        </form>
       </div>
       <div>
         <h3>Site Links</h3>
